# rules_dart

./: .bazelignore  .gitattributes  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  analysis_options.yaml
.bcr/: metadata.template.json
.claude/commands/: bump-bazel.md  bump-dart-sdk.md  bump-deps.md  bump-multitool.md  bump-workflows.md  maintenance-audit.md  refresh-locks.md
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh
dart/: BUILD.bazel  defs.bzl  extensions.bzl  providers.bzl  repositories.bzl  toolchain.bzl  utils.bzl
dart/private/: BUILD.bazel  common.bzl  dart_aggregate_codegen.bzl  dart_analyze.bzl  dart_binary.bzl  dart_codegen.bzl  dart_compile.bzl  dart_format_test.bzl  dart_library.bzl  dart_sdk_binary.bzl  dart_test.bzl  dart_web_application.bzl  package_config.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
dart/private/tools/: BUILD.bazel  codegen_worker.dart  format_checker.dart  pubspec.yaml  test_runner.dart
dart/private/tools/test/: codegen_worker_test.dart
dart/pub/: BUILD.bazel  defs.bzl  extensions.bzl  pub_lock_hub.bzl  pub_lock_package.bzl  yaml_parser.bzl
dart/pub/private/: BUILD.bazel  pub_lock_package.bzl  pub_lock_repository.bzl  pub_repository.bzl
dart/runfiles/: BUILD.bazel  CHANGELOG.md  README.md  pubspec.yaml
dart/runfiles/example/: BUILD.bazel  example.dart
dart/runfiles/lib/: runfiles.dart
dart/tests/: BUILD.bazel  codegen_test.bzl  common_test.bzl  versions_test.bzl  yaml_parser_test.bzl
dev/: BUILD.bazel  gazelle_test.sh
dev/testdata/dart_auto_package_name/: arguments.txt  pubspec.yaml
dev/testdata/dart_auto_package_name/lib/: BUILD.out  app.dart
dev/testdata/dart_auto_package_name/myapp/lib/: BUILD.out
dev/testdata/dart_basic/: README.md
dev/testdata/dart_basic/lib/: BUILD.out  formatter.dart  greeter.dart
dev/testdata/dart_basic/test/: BUILD.out  greeter_test.dart
dev/testdata/dart_conditional_imports/: README.md  expectedStderr.txt
dev/testdata/dart_conditional_imports/lib/: BUILD.out  cross_platform.dart  io_impl.dart
dev/testdata/dart_import_styles/: README.md  expectedStderr.txt
dev/testdata/dart_import_styles/lib/: BUILD.out  greeter.dart  helper.dart  reexport.dart
dev/testdata/dart_package_name/lib/: BUILD.in  BUILD.out  app.dart
dev/testdata/dart_pub_deps_repo/: expectedStderr.txt
dev/testdata/dart_pub_deps_repo/lib/: BUILD.in  BUILD.out  app.dart
docs/: ARCHITECTURE.md  CHORES.md  MASTER_PLAN.md
e2e/analysis/: BUILD.bazel  MODULE.bazel  analysis_options.yaml
e2e/analysis/lib/: good.dart
e2e/analysis/mylib/: BUILD.bazel
e2e/analysis/mylib/lib/: mylib.dart
e2e/cross_compile/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  cross_compile_test.dart  cross_compile_test.sh  hello.dart
e2e/dart_test/: BUILD.bazel  MODULE.bazel  mathlib_test.dart  pubspec.yaml  test_helpers.dart
e2e/dart_test/mathlib/: BUILD.bazel  pubspec.yaml
e2e/dart_test/mathlib/lib/: mathlib.dart
e2e/dart_test/test/: helpers_test.dart  simple_test.dart  utils_test.dart
e2e/dart_test/utils/: pubspec.yaml
e2e/dart_test/utils/lib/: math_utils.dart
e2e/dart_test_pkg/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/dart_test_pkg/test/: example_test.dart
e2e/gazelle/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  gazelle_test.sh  pubspec.yaml
e2e/gazelle/lib/: platform_client.dart  stub.dart  web_impl.dart
e2e/gazelle/test/: greeter_test.dart
e2e/hello_world/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/library_deps/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  main.dart  pubspec.yaml
e2e/library_deps/greeter/: BUILD.bazel  pubspec.yaml
e2e/library_deps/greeter/lib/: greeter.dart
e2e/library_deps/utils/: BUILD.bazel
e2e/library_deps/utils/lib/: utils.dart
e2e/pub_deps/: BUILD.bazel  MODULE.bazel  main.dart  pubspec.yaml
e2e/pub_lock/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  main.dart  pubspec.yaml
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  dart_version_test.sh
e2e/web_app/: BUILD.bazel  MODULE.bazel  config.dart  main.dart  pubspec.yaml
e2e/web_app/greet/: BUILD.bazel  pubspec.yaml
e2e/web_app/greet/lib/: greet.dart
gazelle/: BUILD.bazel
gazelle/dart/: BUILD.bazel  generate.go  kinds.go  language.go  parser.go  parser_test.go  resolve.go
tool/: fetch_sdk_hashes.dart  refresh_locks.dart
