load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart:providers"],
)

bzl_library(
    name = "dart_library",
    srcs = ["dart_library.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart:providers"],
)

bzl_library(
    name = "dart_compile",
    srcs = ["dart_compile.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "package_config",
    srcs = ["package_config.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart:providers"],
)

bzl_library(
    name = "dart_binary",
    srcs = ["dart_binary.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = [
        ":common",
        ":dart_compile",
        "//dart:providers",
    ],
)

bzl_library(
    name = "dart_test",
    srcs = ["dart_test.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart:providers"],
)

bzl_library(
    name = "dart_analyze",
    srcs = ["dart_analyze.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = [
        ":common",
        "//dart:providers",
    ],
)

bzl_library(
    name = "dart_format_test",
    srcs = ["dart_format_test.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "dart_web_application",
    srcs = ["dart_web_application.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = [
        ":common",
        "//dart:providers",
    ],
)

bzl_library(
    name = "dart_sdk_binary",
    srcs = ["dart_sdk_binary.bzl"],
    visibility = ["//dart:__subpackages__"],
)
