load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//dart/pub/private:pub_lock_hub",
        "//dart/pub/private:pub_lock_package",
        "//dart/pub/private:pub_repository",
        "//dart/pub/private:yaml_parser",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)
