load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "yaml_parser",
    srcs = ["yaml_parser.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "pub_lock_package",
    srcs = ["pub_lock_package.bzl"],
    visibility = ["//visibility:public"],
    deps = [":yaml_parser"],
)

bzl_library(
    name = "pub_lock_hub",
    srcs = ["pub_lock_hub.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":pub_lock_hub",
        ":pub_lock_package",
        ":yaml_parser",
        "//dart/pub/private:pub_repository",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)
