load("@rules_dart//dart:defs.bzl", "dart_analyze_test", "dart_format_test", "dart_library")

dart_library(
    name = "good_lib",
    srcs = glob(["lib/**/*.dart"]),
)

dart_analyze_test(
    name = "analyze",
    lib = ":good_lib",
)

# Same library analyzed with stricter custom options.
dart_analyze_test(
    name = "analyze_strict",
    lib = ":good_lib",
    options = "analysis_options.yaml",
)

dart_format_test(
    name = "format_test",
    srcs = glob(["lib/**/*.dart"]),
)
