load("@rules_dart//dart:defs.bzl", "dart_binary")
load("@rules_platform//platform_data:defs.bzl", "platform_data")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

platform(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

dart_binary(
    name = "app",
    main = "hello.dart",
)

platform_data(
    name = "app_linux_x64",
    target = ":app",
    platform = "//:linux_x64",
)

dart_binary(
    name = "app_aot",
    main = "hello.dart",
    compile_mode = "aot-snapshot",
)

# Verifies the cross-compiled binary is ELF (Linux), not Mach-O (macOS).
# On Linux hosts this is a no-op (native build produces ELF anyway),
# but on macOS hosts it validates actual cross-compilation.
sh_test(
    name = "cross_compile_test",
    srcs = ["cross_compile_test.sh"],
    data = [":app_linux_x64"],
)
