load("@rules_dart//dart:defs.bzl", "dart_binary", "dart_test")
load("@rules_platform//platform_data:defs.bzl", "platform_data")

platform(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

dart_binary(
    name = "app",
    main = "hello.dart",
)

platform_data(
    name = "app_linux_x64",
    platform = "//:linux_x64",
    target = ":app",
)

dart_binary(
    name = "app_aot",
    compile_mode = "aot-snapshot",
    main = "hello.dart",
)

# Verifies the cross-compiled binary is ELF (Linux), not Mach-O (macOS).
# On Linux hosts this is a no-op (native build produces ELF anyway),
# but on macOS hosts it validates actual cross-compilation.
dart_test(
    name = "cross_compile_test",
    data = [":app_linux_x64"],
    main = "cross_compile_test.dart",
    deps = ["@rules_dart//dart/runfiles"],
)
