module(name = "dart_test_pkg_e2e")

bazel_dep(name = "rules_dart", version = "0.0.0")
local_path_override(
    module_name = "rules_dart",
    path = "../..",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.2")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")

pub = use_extension("@rules_dart//dart/pub:extensions.bzl", "pub")
pub.from_lock(
    name = "pub_deps",
    lock = "//:pubspec.lock",
)
use_repo(pub, "pub_deps")
