load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@rules_dart//gazelle/dart",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

sh_test(
    name = "gazelle_test",
    srcs = ["gazelle_test.sh"],
    args = ["$(rootpath :gazelle_bin)"],
    data = [
        ":gazelle_bin",
        "bin/deferred_import.dart",
        "bin/hello.dart",
        "bin/show_import.dart",
        "lib/greeter.dart",
        "test/greeter_test.dart",
    ],
)
