load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@rules_dart//gazelle/dart",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

sh_test(
    name = "gazelle_test",
    srcs = ["gazelle_test.sh"],
    args = ["$(rlocationpath :gazelle_bin)"],
    data = [
        "bin/deferred_import.dart",
        "bin/hello.dart",
        "bin/show_import.dart",
        "lib/greeter.dart",
        "lib/io_impl.dart",
        "lib/platform_client.dart",
        "lib/stub.dart",
        "lib/web_impl.dart",
        "test/greeter_test.dart",
        ":gazelle_bin",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
