module(name = "gazelle_e2e")

bazel_dep(name = "rules_dart", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "rules_dart",
    path = "../..",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.1")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")
