load("@rules_dart//dart:defs.bzl", "dart_binary")

dart_binary(
    name = "hello",
    main = "hello.dart",
)

# Alternative compile modes — same source, different output formats.

dart_binary(
    name = "hello_aot",
    compile_mode = "aot-snapshot",
    main = "hello.dart",
)

dart_binary(
    name = "hello_kernel",
    compile_mode = "kernel",
    main = "hello.dart",
)

dart_binary(
    name = "hello_jit",
    compile_mode = "jit-snapshot",
    main = "hello.dart",
)
