load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dart",
    srcs = [
        "generate.go",
        "kinds.go",
        "language.go",
        "parser.go",
        "resolve.go",
    ],
    importpath = "github.com/aran/rules_dart/gazelle/dart",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "dart_test",
    srcs = ["parser_test.go"],
    embed = [":dart"],
)
