load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "yaml_parser",
    srcs = ["yaml_parser.bzl"],
    visibility = ["//dart/pub:__subpackages__"],
)

bzl_library(
    name = "pub_repository",
    srcs = ["pub_repository.bzl"],
    visibility = ["//dart/pub:__subpackages__"],
)

bzl_library(
    name = "pub_lock_repository",
    srcs = ["pub_lock_repository.bzl"],
    visibility = ["//dart/pub:__subpackages__"],
    deps = [":yaml_parser"],
)
